# OF_DIS

./: .gitignore  .gitignore.swp  .oflow.cpp.swo  .oflow.cpp.swp  .patch.cpp.swo  .patch.cpp.swp  .patch.h.swp  .patchgrid.cpp.swo  .patchgrid.cpp.swp  .refine_variational.cpp.swp  .refine_variational.h.swp  .run_dense.cpp.swo  .run_dense.cpp.swp  oflow.cpp  patch.cpp  patch.h  patchgrid.cpp  patchgrid.h  refine_variational.cpp  refine_variational.h  run_dense.cpp
FDF1.0.1/: .image.c.swp  .image.h.swp  .opticalflow_aux.c.swo  .opticalflow_aux.c.swp  .opticalflow_aux.h.swp  image.c  opticalflow_aux.c  opticalflow_aux.h  solver.c
Ideas/: .benchmark.cpp.swp  1_canny_solution.ipynb  CMakeCache.txt  CMakeLists.txt  Makefile  benchmark  benchmark.cpp  benchmark.sh  cmake_install.cmake  errormap  errormap.cpp  evalall  evalall.cpp  frame_0001.flo  gaussian.py  grad  grad.cpp  matplotlibcpp.h  occlu  occlu.cpp  tuned_frame_0001.flo  tuned_frame_0021.flo
Ideas/.ipynb_checkpoints/: 1_canny_solution-checkpoint.ipynb  Untitled-checkpoint.ipynb
OFlow/: FlowAsFlux.m  frame_0021_raw.flo  myCurl.m  myDiv.m  myGrad.m
